@@ -1,42 +1,0 @@
-config.tx_extbase {
-	persistence {
-		classes {
-			SJBR\StaticInfoTables\Domain\Model\Country {
-				mapping {
-					columns {
-						cn_short_es.mapOnProperty = shortNameEs
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\CountryZone {
-				mapping {
-					columns {
-						zn_name_es.mapOnProperty = nameEs
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Currency {
-				mapping {
-					columns {
-						cu_name_es.mapOnProperty = nameEs
-						cu_sub_name_es.mapOnProperty = subdivisionNameEs
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Language {
-				mapping {
-					columns {
-						lg_name_es.mapOnProperty = nameEs
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Territory {
-				mapping {
-					columns {
-						tr_name_es.mapOnProperty = nameEs
-					}
-				}
-			}
-		}
-	}
-}
